# RepoLens

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: cmake-multi-platform.yml
apps/repolens/: main.cpp
benchmarks/: framework.hpp  main.cpp
benchmarks/core/: version_benchmarks.cpp
cmake/: check_architecture.cmake  repolens_config.hpp.in
docs/: ARCHITECTURE.md  ENGINEERING.md  MEMORY.md  PERFORMANCE.md  ROADMAP.md
docs/decisions/: 0001-project-mission.md  0002-language-and-build-system.md  0003-clean-architecture.md  0004-license-and-governance-baseline.md  0005-architecture-boundary-enforcement.md  0006-benchmark-infrastructure.md  0007-logging-and-tracing.md  0008-memory-allocation-strategy.md
include/repolens/core/: version.hpp
include/repolens/support/: logging.hpp  tracing.hpp
src/repolens/core/: version.cpp
src/repolens/support/: logging.cpp  tracing.cpp
tests/: main.cpp  test_framework.hpp
tests/core/: version_tests.cpp
tests/support/: logging_tracing_tests.cpp
